chore(doc): remove side navigation on moible

--- a/projects/sandbox/src/app/app.component.html
+++ b/projects/sandbox/src/app/app.component.html
@@ -129,11 +129,11 @@
             </aside>
 
             <div class="flex flex-wrap-reverse w-full xl:w-4/5">
-                <div class="w-full py-4 xl:pt-8 xl:pb-4 border-gray-200 xl:w-3/4 xl:border-l xl:border-r">
+                <div class="w-full pt-8 pb-4 border-gray-200 xl:w-3/4 xl:border-l xl:border-r">
                     <router-outlet></router-outlet>
                 </div>
 
-                <div class="w-full xl:w-1/4 block relative">
+                <div class="w-full xl:w-1/4 xl:block hidden relative">
                     <div class="xl:sticky xl:top-16 overflow-y-auto h-full xl:h-auto xl:max-h-(screen-16)">
                         <router-outlet name="side"></router-outlet>
                     </div>
