--- a/projects/sandbox/src/app/routes/c-select-route/c-select-route.component.html
+++ b/projects/sandbox/src/app/routes/c-select-route/c-select-route.component.html
@@ -88,6 +88,13 @@
             </div>
         </div>
     </div>
+
+    <h3>Usage</h3>
+
+    <markdown
+        [data]="markdownUsage"
+        class="max-h-96 block rounded overflow-y-auto"
+    ></markdown>
 </article>
 
 <div class="content-footer">
