--- a/projects/sandbox/src/app/routes/c-progress-bar-route/c-progress-bar-route.component.html
+++ b/projects/sandbox/src/app/routes/c-progress-bar-route/c-progress-bar-route.component.html
@@ -50,6 +50,13 @@
             </div>
         </div>
     </div>
+
+    <h3>Usage</h3>
+
+    <markdown
+        [data]="markdownUsage"
+        class="max-h-96 block rounded overflow-y-auto"
+    ></markdown>
 </article>
 
 <div class="content-footer">
