--- a/projects/ng-tw/src/modules/select/select.component.html
+++ b/projects/ng-tw/src/modules/select/select.component.html
@@ -35,6 +35,7 @@
     cdkConnectedOverlayHasBackdrop
     cdkConnectedOverlayLockPosition
     [cdkConnectedOverlayBackdropClass]="'cdk-overlay-transparent-backdrop'"
+    [cdkConnectedOverlayScrollStrategy]="_scrollStrategy"
     [cdkConnectedOverlayOrigin]="elementRef.nativeElement"
     [cdkConnectedOverlayOpen]="isOpen"
     [cdkConnectedOverlayWidth]="overlayWidth || elementRef.nativeElement.offsetWidth"
