--- a/projects/sandbox/src/app/app.component.html
+++ b/projects/sandbox/src/app/app.component.html
@@ -89,7 +89,7 @@
                                 <button
                                     *ngSwitchCase="null"
                                     tw-dropdown-item
-                                    class="text-xs font-bold mt-2 text-gray-600 hover:disabled:text-gray-600"
+                                    class="text-xs font-bold mt-2 text-gray-600 hover:disabled:text-gray-600 uppercase"
                                     ignore="disabled:text-gray-400 hover:disabled:text-gray-400"
                                     [disabled]="true"
                                 >
