--- a/projects/sandbox/src/app/routes/c-select-route/c-select-route.component.html
+++ b/projects/sandbox/src/app/routes/c-select-route/c-select-route.component.html
@@ -1,6 +1,6 @@
 <article class="prose max-w-none lg:px-8">
     <h1 id="select">
-        Progress Bar
+        Select
     </h1>
 
     <p>To use the select component you need to load it in the module you'll use it:</p>
