feat(select/arrow): customize arrow icon

--- a/projects/sandbox/src/app/routes/c-select-route/c-select-route.component.html
+++ b/projects/sandbox/src/app/routes/c-select-route/c-select-route.component.html
@@ -38,6 +38,45 @@
         </div>
 
         <div class="demo-row">
+            <div class="demo-row-title">Custom arrow</div>
+
+            <div class="demo-row-content md:flex-1">
+                <tw-select
+                    class="w-64 max-w-full"
+                    [formControl]="selectCustomArrowControl"
+                >
+                    <svg
+                        arrow-icon
+                        xmlns="http://www.w3.org/2000/svg"
+                        class="h-4 w-4 text-red-500"
+                        viewBox="0 0 20 20"
+                        fill="currentColor"
+                    >
+                        <path
+                            fill-rule="evenodd"
+                            d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
+                            clip-rule="evenodd"
+                        />
+                    </svg>
+
+                    <tw-option>Select an option</tw-option>
+                    <tw-option
+                        activeClass="bg-gray-100"
+                        selectedClass="font-bold"
+                        *ngFor="let item of options"
+                        [value]="item.value"
+                    >
+                        {{item.label}}
+                    </tw-option>
+                </tw-select>
+            </div>
+
+            <div class="md:flex-1">
+                Selected Value: {{ selectCustomArrowControl.value ? selectCustomArrowControl.value : '---' }}
+            </div>
+        </div>
+
+        <div class="demo-row">
             <div class="demo-row-title">Compare with</div>
 
             <div class="demo-row-content md:flex-1">
@@ -94,7 +133,7 @@
             <div class="demo-row-content md:flex-1">
                 <tw-select
                     class="w-64 max-w-full"
-                    [formControl]="selectControlWithInput"
+                    [formControl]="selectWithInputControl"
                 >
                     <input
                         type="text"
@@ -115,7 +154,7 @@
             </div>
 
             <div class="md:flex-1">
-                Selected Value: {{ selectControlWithInput.value ? selectControlWithInput.value : '---' }}
+                Selected Value: {{ selectWithInputControl.value ? selectWithInputControl.value : '---' }}
             </div>
         </div>
     </div>
