--- a/projects/ng-tw/src/modules/select/select.component.html
+++ b/projects/ng-tw/src/modules/select/select.component.html
@@ -13,8 +13,22 @@
     [hidden]="!innerValue || !htmlValue"
 ></span>
 
-<span class="absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none">
-    <!-- Heroicon name: solid/selector -->
+<style>
+    .custom-arrow:empty {
+        display: none;
+    }
+</style>
+<span
+    class="custom-arrow absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none"
+    #arrowContainer
+>
+    <ng-content select="[arrow-icon]"></ng-content>
+</span>
+
+<span
+    class="default-arrow absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none"
+    *ngIf="arrowContainer.children.length === 0"
+>
     <svg
         class="h-5 w-5 text-gray-400"
         xmlns="http://www.w3.org/2000/svg"
