refactor(markdown/theme): support for tabs [#13]

--- a/projects/sandbox/src/app/routes/installation-route/installation-route.component.html
+++ b/projects/sandbox/src/app/routes/installation-route/installation-route.component.html
@@ -40,6 +40,11 @@
 
     <markdown [data]="markdownTailwindColorConfig"></markdown>
 
+    <h4>Disabled Variants</h4>
+    <blockquote>
+        <p>It's also important to note that you should add the <code>disabled</code> variant for <code>opacity</code> and <code>backgroundColor</code>.</p>
+    </blockquote>
+
     <h4>Content</h4>
 
     <p>Tailwind uses purge to make the bundle size smaller, you'll need to setup the lib in the <code class="tw-code">content</code> section of your <code class="tw-code">tailwind.config.js</code> to make it work</p>
