--- a/projects/sandbox/src/app/routes/c-notification-route/c-notification-route.component.html
+++ b/projects/sandbox/src/app/routes/c-notification-route/c-notification-route.component.html
@@ -72,6 +72,35 @@
             </div>
         </div>
     </div>
+
+    <h3>Usage</h3>
+
+    <div class="markdown-with-tabs dark">
+        <div class="tabs-container bg-[#3C3D37] p-4 rounded-t flex space-x-4">
+            <button
+                tw-button
+                size="xs"
+                class="dark:disabled:text-gray-200 dark:hover:bg-gray-50 dark:hover:bg-opacity-10 dark:text-gray-50"
+                [ngClass]="{'dark:bg-gray-50 dark:bg-opacity-10': markdownUsageSegment === 'html'}"
+                (click)="markdownUsageSegment = 'html'"
+            >
+                page.html
+            </button>
+            <button
+                tw-button
+                size="xs"
+                class="dark:disabled:text-gray-200 dark:hover:bg-gray-50 dark:hover:bg-opacity-10 dark:text-gray-50"
+                [ngClass]="{'dark:bg-gray-50 dark:bg-opacity-10': markdownUsageSegment === 'ts'}"
+                (click)="markdownUsageSegment = 'ts'"
+            >
+                page.ts
+            </button>
+        </div>
+        <markdown
+            [data]="markdownUsageSegment === 'html' ? markdownUsageHTML : markdownUsageTS"
+            class="has-tabs"
+        ></markdown>
+    </div>
 </article>
 
 <div class="content-footer">
