--- a/projects/sandbox/src/styles.scss
+++ b/projects/sandbox/src/styles.scss
@@ -5,7 +5,7 @@
 
 @import 'prismjs/themes/prism-okaidia.css';
 @import 'prismjs/plugins/line-numbers/prism-line-numbers.css';
-@import 'prismjs/plugins/line-highlight/prism-line-highlight.css';
+// @import 'prismjs/plugins/line-highlight/prism-line-highlight.css';
 
 @import './theme/markdown';
 
