--- a/projects/ng-tw/src/modules/input/input.component.html
+++ b/projects/ng-tw/src/modules/input/input.component.html
@@ -1,4 +1,4 @@
 <div>
     <label class="block text-gray-700 text-sm font-bold mb-2" for="{{id}}">{{label}}</label>
-    <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" [id]="id" [type]="type" [placeholder]="placeholder" [value]="_value" (blur)="onTouched()" (input)="handleInput($event)">
+    <input [id]="id" [type]="type" [placeholder]="placeholder" [value]="_value" (blur)="onTouched()" (input)="handleInput($event)" #field>
 </div>
