Changed component to select by attribute

--- a/projects/ng-tw/src/modules/input/input.component.html
+++ b/projects/ng-tw/src/modules/input/input.component.html
@@ -1,4 +1,1 @@
-<div>
-    <label class="block text-gray-700 text-sm font-bold mb-2" for="{{id}}">{{label}}</label>
-    <input [id]="id" [type]="type" [placeholder]="placeholder" [value]="_value" (blur)="onTouched()" (input)="handleInput($event)" #field>
-</div>
+<ng-content></ng-content>
