--- a/projects/sandbox/src/app/routes/c-input-route/c-input-route.component.html
+++ b/projects/sandbox/src/app/routes/c-input-route/c-input-route.component.html
@@ -14,7 +14,7 @@
             <div class="demo-row-title">Small Input</div>
 
             <div class="demo-row-content">
-                <tw-input label="Name" placeholder="John Doe" size="sm"></tw-input>
+                <input tw-input label="Name" placeholder="John Doe" size="sm">
             </div>
         </div>
 
@@ -22,7 +22,7 @@
             <div class="demo-row-title">Medium Input</div>
 
             <div class="demo-row-content">
-                <tw-input label="Name" placeholder="John Doe" size="md"></tw-input>
+                <input tw-input label="Name" placeholder="John Doe" size="md">
             </div>
         </div>
 
@@ -30,7 +30,7 @@
             <div class="demo-row-title">Large Input</div>
 
             <div class="demo-row-content">
-                <tw-input label="Name" placeholder="John Doe" size="lg"></tw-input>
+                <input tw-input label="Name" placeholder="John Doe" size="lg">
             </div>
         </div>
 
