Split checkbox into checkbox and toggle

--- a/projects/sandbox/src/app/routes/c-toggle-route/c-toggle-route.component.html
+++ b/projects/sandbox/src/app/routes/c-toggle-route/c-toggle-route.component.html
@@ -1,6 +1,6 @@
 <article class="prose max-w-none lg:px-8">
     <h1 id="notification">
-        Checkbox
+        Toggle
     </h1>
 
     <markdown [data]="markdownLoad"></markdown>
@@ -11,18 +11,18 @@
     <div class="demo-container">
 
         <div class="demo-row">
-            <div class="demo-row-title">Default checkbox</div>
+            <div class="demo-row-title">Default toggle</div>
 
             <div class="demo-row-content">
-                <tw-checkbox></tw-checkbox>
+                <tw-toggle></tw-toggle>
             </div>
         </div>
 
         <div class="demo-row">
-            <div class="demo-row-title">Checkbox with label</div>
+            <div class="demo-row-title">Toggle with label</div>
 
             <div class="demo-row-content">
-                <tw-checkbox label="Click me!"></tw-checkbox>
+                <tw-toggle label="Click me!"></tw-toggle>
             </div>
         </div>
     </div>
