Added color support to checkbox (somewhat WIP)

--- a/projects/sandbox/src/app/routes/c-checkbox-route/c-checkbox-route.component.html
+++ b/projects/sandbox/src/app/routes/c-checkbox-route/c-checkbox-route.component.html
@@ -19,10 +19,10 @@
         </div>
 
         <div class="demo-row">
-            <div class="demo-row-title">Checkbox with label</div>
+            <div class="demo-row-title">Checkbox with label and custom color</div>
 
             <div class="demo-row-content">
-                <tw-checkbox label="Click me!"></tw-checkbox>
+                <tw-checkbox color="accent-red-500" label="Click me!"></tw-checkbox>
             </div>
         </div>
     </div>
