Toggle custom colors (WIP?)

--- a/projects/sandbox/src/app/routes/c-toggle-route/c-toggle-route.component.html
+++ b/projects/sandbox/src/app/routes/c-toggle-route/c-toggle-route.component.html
@@ -19,10 +19,10 @@
         </div>
 
         <div class="demo-row">
-            <div class="demo-row-title">Toggle with label</div>
+            <div class="demo-row-title">Toggle with label and custom color</div>
 
             <div class="demo-row-content">
-                <tw-toggle label="Click me!"></tw-toggle>
+                <tw-toggle label="Click me!" enabledColor="bg-red-600"></tw-toggle>
             </div>
         </div>
     </div>
