--- a/projects/ng-tw/src/modules/toggle/toggle.component.html
+++ b/projects/ng-tw/src/modules/toggle/toggle.component.html
@@ -1,8 +1,8 @@
 <div class="flex items-center">
     <!-- Enabled: "bg-indigo-600", Not Enabled: "bg-gray-200" -->
-    <button type="button" [ngClass]="value ? 'bg-indigo-600' : 'bg-gray-200'" class="relative inline-flex h-6 w-11 flex-shrink-0 cursor-pointer rounded-full border-2 border-transparent transition-colors duration-200 ease-in-out focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:ring-offset-2" role="switch" aria-checked="false" (blur)="onTouched()" (click)="toggleValue()">
+    <button type="button" [ngClass]="value ? getEnabledColor() : 'bg-gray-200'" [class]="getPillClasses()" role="switch" aria-checked="false" (blur)="onTouched()" (click)="toggleValue()">
     <!-- Enabled: "translate-x-5", Not Enabled: "translate-x-0" -->
-        <span aria-hidden="true" [ngClass]="value ? 'translate-x-5' : 'translate-x-0'" class="pointer-events-none inline-block h-5 w-5 transform rounded-full bg-white shadow ring-0 transition duration-200 ease-in-out"></span>
+        <span aria-hidden="true" [ngClass]="value ? 'translate-x-5' : 'translate-x-0'" [class]="getSliderClasses()"></span>
     </button>
     <span class="ml-3 text-sm" *ngIf="label">
         <span class="font-medium text-gray-900">{{label}}</span>
